2012-01-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h:
	* Source/CFURL.c: Added percent escape replacement function.
	* Tests/CFURL/escaping.m: Added more tests.

2012-01-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h:
	* Source/CFURL.c: Fixed bug in percent escape function.
	* Tests/CFURL/escaping.m: Added first CFURL test.

2012-01-14 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c:
	* Source/CFString.c:
	* Source/CFStringEncoding.c:
	* Source/GSPrivate.h: Redesigned Unicode conversion.
	* Headers/CoreFoundation/CFBase.h: Define __BIG_ENDIAN__ or 
	__LITTLE_ENDIAN__ macros for platforms do not already define them.
	* Headers/CoreFoundation/CFByteOrder.h: Use new endian macros.
	* Headers/CoreFoundation/ForFoundationOnly.h: Delete.


2012-01-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c:
	* Source/CFURL.m:
	* Source/common.mk:
	* Source/GNUmakefile: Replace CFURL.m with CFURL.c.  CFURL still not
	functional.
	* Source/CFStringEncoding.c:
	* Source/CFStringFormat.c:
	* Source/GSPrivate.h: Moved some defines and functions to GSPrivate.h.

2012-01-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c:
	* Source/CFDateFormatter.c:
	* Source/CFBundle.m: Avoid compiler warnings.
	* Source/Keys+Identifiers.c: Fix broken build.

2012-01-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFRuntime.h:
	* Headers/CoreFoundation/CFByteOrder.h:
	* Headers/CoreFoundation/CFString.h:
	* Headers/CoreFoundation/CFLocale.h:
	* Headers/CoreFoundation/CFNumberFormatter.h:
	* Source/CFString.c:
	* Source/CFStringFormat.c:
	* Source/CFBundle.m:
	* Source/CFLocale.c:
	* Source/GSPrivate.h:
	* Source/CFDateFormatter.c:
	* Source/CFStringUtilities.c:
	* Source/Keys+Identifiers.c:
	* Source/CFBinaryHeap.c:
	* Source/CFRuntime.c: More portability improvements.

2012-01-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c:
	* Source/CFBitVector.c:
	* Source/CFCalendar.c: