@@ -426,6 +426,7 @@ extern void CFStringInitialize (void);
 extern void CFStringEncodingInitialize (void);
 extern void CFTimeZoneInitialize (void);
 extern void CFTreeInitialize (void);
+extern void CFURLInitialize (void);
 extern void CFUUIDInitialize (void);
 extern void CFXMLNodeInitialize (void);
 
@@ -471,6 +472,7 @@ void CFInitialize (void)
   CFStringEncodingInitialize ();
   CFTimeZoneInitialize ();
   CFTreeInitialize ();
+  CFURLInitialize ();
   CFUUIDInitialize ();
   CFXMLNodeInitialize ();
 }
